# kuma_llm_utils

./: .gitignore  README.md  pyproject.toml
examples/: 01_text_inference.ipynb  02_multimodal_inference.ipynb  03_fewshot_inference.ipynb  04_inference_with_hf_models_using_vllm.ipynb  05_routing.ipynb
kuma_llm_utils/: logger.py  text_utils.py  utils.py
kuma_llm_utils/llm/: __init__.py  abstract.py  anthropic.py  google_ai.py  openai.py  together_ai.py  utils.py  vllm.py
kuma_llm_utils/pipeline/: __init__.py  abstract.py  basic.py  router.py
