[tool.poetry]
name = "kuma_llm_utils"
version = "0.1.0"
description = ""
authors = ["Hiroshi Yoshihara"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {version = "^2.5.0", source = "torch_cu121"}
torchvision = {version = "^0.20.0", source = "torch_cu121"}
torchaudio = {version = "^2.5.0", source = "torch_cu121"}
transformers = "^4.36.0"
langchain = "0.1.0"
accelerate = "^0.26.0"
bitsandbytes = "^0.45.0"
pypdf = "^3.17.2"
tiktoken = "^0.7.0"
fugashi = {extras = ["unidic-lite"], version = "^1.3.0"}
sentence-transformers = "^2.2.2"
faiss-gpu = "^1.7.2"
trafilatura = "^1.6.3"
openai = "^1.3.9"
llama-index = "^0.9.14.post3"
gradio = "^4.9.0"
wandb = "^0.16.1"
qdrant-client = "^1.7.0"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
langchain-community = "^0.0.13"
sentencepiece = "^0.2.0"
openpyxl = "^3.1.2"
peft = "^0.10.0"
japanize-matplotlib = "^1.1.3"
slack-bolt = "^1.20.1"
vllm = "^0.6.6.post1"
anthropic = "^0.43.1"
mojimoji = "^0.0.13"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
